# library-app/internal/models/author.go
@@ -7,9 +7,9 @@ import (
 
 type Author struct {
 	gorm.Model
-	Name        string `gorm:"size:256"`
-	Country     string `gorm:"size:256"`
-	Birthday    time.Time
-	DateOfDeath time.Time
-	Biography   string
+	Name      string `gorm:"size:256"`
+	Country   string `gorm:"size:256"`
+	Birthday  time.Time
+	DeathDate time.Time
+	Bio       string
 }
